Correctly word wraps really long words
For example if a just message is just aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

--- a/client/base.css
+++ b/client/base.css
@@ -156,6 +156,7 @@
 
 /* Content container */
 .content {
+  word-break: break-word;
 }
 
 .text {
